Make nsRange::ToString and nsContentIterator deal with ranges with endpoint containers being the document. Patch by bz. r/sr=sicking b=358660